[REFACTOR] ScoreRecordQueryService 메서드 분리 #107